syntax = "proto3";

package pb;
option go_package="./pb";

message IncreaseVolumeReq {
  int64 id = 1;
  int64 size = 2;
}

message IncreaseVolumeResp {
  bool success = 1;
}

service User {
  // 增加用户存储容量
  rpc IncreaseVolume(IncreaseVolumeReq) returns (IncreaseVolumeResp);
} 